# csst-ifs-gehong

./: .readthedocs.yaml  README.md  pyproject.toml  pyproject.toml.old  setup.py
docs/: requirements.txt
docs/source/: algorithm.rst  api_old.rst  changelog.rst  cite.rst  conf.py  emissionline.rst  example copy.rst  example.rst  gehong.rst  index.rst  install.rst  installation.rst  license.rst  logo.rst  modules.rst  spec1d.rst  usage.rst
docs/source/algorithm/: agn.rst  gas.rst  map.rst  stellar.rst
docs/source/algorithm/cube/: cube 2.rst  cube.rst
docs/source/algorithm/map/: map 2.rst  map.rst
docs/source/algorithm/sed/: agn.rst  gas.rst  sed.rst  star.rst  stellar.rst
docs/source/api/: api.rst  config.module.rst  cube3d.module.rst  gehong.sed.rst  map2d.module.rst  module.rst  spec1d.module.rst
docs/source/gehong/: __init__.py  config.py  cube3d.py  map2d.py  spec1d.py
docs/source/usage/: install.rst  quickstart.rst
docs/source/usage/example/: agn.rst  config.rst  cube3d.rst  hii.rst  map2d.rst  spec1d.rst  star.rst  stellar.rst
example/: Example_Cube3D.ipynb  Example_Map2D.ipynb  Example_Spec1D.ipynb  TNG_Example.fits
gehong/: config.py  cube3d.py  map2d.py  sed.py  spec1d.py
gehong/data/: AGN.NLR.fits  FeII.AGN.fits  SDSS_Emline_Table.fits  fsps.nebular.fits
gehong/spec1d/: emissionline.py  util.py
src/gehong/: config.py  cube3d.py  map2d.py  spec1d.py
test/: test_cube3d.py  test_map2d.py  test_sed.py  test_spec1d.py
